--- a/ParthsBookStore/Views/Shared/_Layout.cshtml
+++ b/ParthsBookStore/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                         <li class="new-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Content Management </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" asp-area="Admin" asp-asp-controller="Category" asp-action="Index"> Category </a>
+                                <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index"> Category </a>
                                 <a class="dropdown-item" href="#"> Another Action </a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#"> Something else here </a>
