--- a/ParthsBookStore/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/ParthsBookStore/Areas/Admin/Views/Product/Upsert.cshtml
@@ -77,7 +77,7 @@
                     Cover Type
                 </div>
                 <div class="col-8">
-                    @Html.DropDownListFor(m => m.Product.CategoryId, Model.CategoryList, "-Select a Cover Type",
+                    @Html.DropDownListFor(m => m.Product.CoverTypeId, Model.CoverTypeList, "-Select a Cover Type",
                    new { @class = "form-control" })
                     <span asp-validation-for="Product.CoverTypeId" class="text-danger"></span>
                 </div>
@@ -110,6 +110,12 @@
                 </div>
             </div>
         </div>
+        @if (Model.Product.Id != 0)
+        {
+            <div class="col-3 offset-1 pt-4">
+                <img src="@Model.Product.ImageUrl" width="100%" style="border-radius:5px; border:1px solid #bbb9b9" />
+            </div>
+        }
     </div>
 </form>
 
@@ -125,7 +131,7 @@
 
         function validateinput()
         {
-            if(document.getElementById("uploadBox").ariaValueMax = "")
+            if(document.getElementById("uploadBox").ariaValueMax == "")
             {
                 swal("Error", "Please select an image", "error")
                 return false;
